# photo-archiver

./: .gitignore.txt  CMakeLists.txt  README.md  afc.cpp  afc.h  dct.cpp  dct.h  huffman.cpp  huffman.h  lzw.cpp  lzw.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rle.cpp  rle.h  styled_btn.cpp  styled_btn.h
